# sterad

./: .gitignore  Cargo.toml  README.md
crates/sterad-numerical/: Cargo.toml
crates/sterad-ray-tracing/: Cargo.toml
crates/sterad-ray-tracing/src/: cylinder.rs  disk.rs  error.rs  float.rs  interval.rs  lib.rs  plate_element.rs  ray.rs  rectangle.rs  transform.rs  triangle.rs  vecmath.rs  view_factor.rs
crates/sterad-solid-angle/: Cargo.toml
crates/sterad-solid-angle/src/: elliptic_integral.rs  error.rs  lib.rs  point_to_disk.rs  point_to_rectangle.rs  point_to_triangle.rs
crates/sterad-solid-angle/tests/: point_to_disk_test.rs  utils.rs
crates/sterad-view-factor/: Cargo.toml
crates/sterad-view-factor/src/: diff_element_to_disk.rs  diff_element_to_ellipse.rs  diff_element_to_ellipsoid.rs  diff_element_to_rectangle.rs  diff_element_to_sphere.rs  diff_element_to_sphericalcap.rs  diff_element_to_spheroid.rs  error.rs  lib.rs  vecmath.rs
crates/sterad-view-factor/tests/: diff_element_to_disk_test.rs  diff_element_to_ellipse_test.rs  diff_element_to_ellipsoid_test.rs  diff_element_to_sphere_test.rs  diff_element_to_sphericalcap_test.rs  diff_element_to_spheroid_test.rs  utils.rs
