[workspace]
members = [
    "crates/sterad-solid-angle",
    "crates/sterad-view-factor",
    "crates/sterad-numerical"
]

resolver = "2"

[workspace.package]
description = "Library for calculating radiation view factors and solid angles in various geometrical configurations."
license = "MIT"
authors = ["Kaname Sasaki <kaname.sasaki@outlook.com>"]